--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.75;
   background-color: #E6E6E6;
 }
 .wrapper{
-  position: fixed;
+  position: absolute; /* bilo je fixed */
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  background: #E6E6E6;
   clip-path: circle(25px at calc(100% - 45px) 45px);
   transition: all 0.4s ease-in-out;
   z-index: 1;
@@ -27,21 +30,16 @@ body {
   text-align: center;
   line-height: 50px;
   border-radius: 50%;
-  font-size: 20px;
+  font-size: 21px;
   color: #333;
   cursor: pointer;
   background: #E6E6E6;
-  transition: all 0.3s ease-in-out;
-}
-#active:checked ~ .menu-btn{
-  color: #333;
 }
 #active:checked ~ .menu-btn i:before{
   content: "\f00d";
 }
 #active:checked ~ .wrapper {
   background: #333;
-  z-index: 1;
 }
 .wrapper ul{
   position: absolute;
@@ -68,6 +66,7 @@ body {
   border: 1px solid #E6E6E6;
   position: relative;
   line-height: 56px;
+  text-align: center;
   transition: all 0.3s ease;
   overflow: hidden;
 }
@@ -98,8 +97,7 @@ input[type="checkbox"]{
   transform: translate3d(0, 0, 0);
   position: relative;
   width: 25%;
-  height: 98vh;
-  min-height: 600px;
+  height: 100vh;
   color: #FFF;
   overflow: hidden;
   transition: width 0.4s ease;
@@ -160,9 +158,9 @@ h1 {
   display: block;
   font-size: 30px;
   padding: 0px 35px;
-  color: #FFF;
+  color: #E6E6E6;
   text-decoration: none;
-  border: 2px solid #FFF;
+  border: 2px solid #E6E6E6;
 }
 .tl-bg {
   position: absolute;
@@ -233,7 +231,7 @@ h1 {
   display: block;
   width: 40px;
   height: 40px;
-  position: absolute;
+  position: fixed;
   bottom: 20px;
   right: 20px;
   border: 2px solid #333;
@@ -250,8 +248,126 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 18px;
+  color: #333;
 }
 .next:hover, .previous:hover {
   background-color: #333;
   color: #E6E6E6;
+}
+@media screen and (max-width: 1280px) {
+}
+@media screen and (max-width: 1080px) {
+  #timeline {
+    display: block;
+  }
+  .tl-item {
+    width: 50%;
+    height: 50vh;
+    transition: 0.1s;
+    float: left;
+  }
+  .tl-item:hover {
+      width: 50% !important;
+  }
+  .tl-item:hover:before {
+    opacity: 0;
+  }
+  .tl-item:hover .tl-content {
+    opacity: 0;
+  }
+  .tl-item:hover .tl-year {
+    transform: translateX(-50%)translateY(-50%);
+  }
+  .tl-item:hover .tl-year {
+    background-color: transparent;
+  }
+  .tl-year a:hover {
+    background-color: #E6E6E6;
+    color: #333;
+  }
+}
+@media screen and (max-width: 980px) {
+  .menu-btn{
+    height: 100px;
+    width: 100px;
+    line-height: 100px;
+    font-size: 42px;
+  }
+  .wrapper ul li{
+    margin: 50px 0;
+  }
+  .wrapper ul li a {
+    width: 480px;
+    font-size: 74px;
+    border: 5px solid #E6E6E6;
+    line-height: 150px;
+  }
+  .tl-item {
+    width: 100%;
+    height: 46vh;
+    transition: 0.1s;
+  }
+  .tl-item:hover {
+      width: 100% !important;
+  }
+  .tl-year a {
+    font-size: 92px;
+    border: 5px solid #E6E6E6;
+    padding: 0px 60px;
+  }
+  .tl-year a:hover {
+    padding: 5px 70px;
+    background-color: #E6E6E6;
+    color: #333;
+  }
+  .img-slide {
+    width: 100%;
+    height: 32vh;
+    animation-duration: 0.8s;
+  }
+  .text {
+    left: 0;
+    top: 34%;
+    width: 100%;
+    animation-duration: 1.5s;
+  }
+  .text h1 {
+    width: 80%;
+    line-height: 160px;
+    font-size: 124px;
+    padding-top: 20px;
+    border-bottom: 5px solid #333;
+  }
+  .text h2 {
+    font-size: 48px;
+    margin-top: 10px;
+    letter-spacing: 6px;
+  }
+  .forest h1, .forest h2 {
+    border-bottom-color: #1e7b1e;
+  }
+  .sea h1, .sea h2 {
+    border-bottom-color: #0066CC;
+  }
+  .mountains h1, .mountains h2 {
+    border-bottom-color: #8C8C8C;
+  }
+  .mountains h1 {
+    width: 90%;
+  }
+  .next, .previous {
+    width: 100px;
+    height: 100px;
+    border: 3px solid #333;
+    transition: 0.1s;
+  }
+  .previous {
+    right: 145px;
+  }
+  .next i, .previous i {
+    font-size: 38px;
+  }
+  .next i:hover, .previous i:hover {
+    color: #E6E6E6;
+  }
 }
