--- a/style.css
+++ b/style.css
@@ -133,15 +133,20 @@ input[type="checkbox"]{
   position: relative;
   z-index: 1;
   text-align: center;
+  color: #E6E6E6;
   margin: 0 1.618em;
   top: 55%;
   opacity: 0;
 }
-h1 {
+.tl-content h1 {
+  width: 50%;
+  margin: 0 auto;
   text-transform: uppercase;
-  color: #1779cf;
   font-size: 1.44rem;
   font-weight: normal;
+  border-bottom: 1px solid #E6E6E6;
+  padding-bottom: 5px;
+  margin-bottom: 15px;
 }
 .tl-year {
   position: absolute;
@@ -189,6 +194,16 @@ h1 {
 .mountains-img {
   background-image: url("img/img-mountains.jpg");
 }
+.parks-img {
+  background-image: url("img/img-parks.jpg");
+}
+.about-img {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 120vh;
+  background-image: url("img/img-about.jpg");
+}
 .text {
   position: absolute;
   left: 35%;
@@ -224,6 +239,10 @@ h1 {
   color: #8C8C8C;
   border-bottom-color: #8C8C8C;
 }
+.parks h1, .parks h2 {
+  color: #90A45B;
+  border-bottom-color: #90A45B;
+}
 .mountains h1 {
   width: 530px;
 }
@@ -252,6 +271,8 @@ h1 {
 }
 .next:hover, .previous:hover {
   background-color: #333;
+}
+.next:hover i, .previous:hover i {
   color: #E6E6E6;
 }
 @media screen and (max-width: 1280px) {
